# VoiceAssistant

./: .env  README.md  Voice Assistant Commands.docx  docker-compose.yml
backend/asr/: Dockerfile  app.py  requirements.txt
backend/llm/: Dockerfile  app.py  requirements.txt
backend/orchestrator/: Dockerfile  orchestrator.py  requirements.txt
backend/tts/: Dockerfile  app.py  generator.py  models.py  requirements.txt
backend/tts/csm_utils/: loader.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/components/: MicrophoneButton.css  MicrophoneButton.tsx  SpeakingAnimation.css  SpeakingAnimation.tsx  StatusDisplay.css  StatusDisplay.tsx  TranscriptDisplay.css  TranscriptDisplay.tsx
frontend/src/components/icons/: MicIcon.tsx  ResetIcon.tsx  StopIcon.tsx
frontend/src/lib/: api.ts  audioUtils.ts  store.ts
shared/: config.yaml
