[package]
name        = "frontend"
version     = "0.1.0"
description = "A Tauri App"
authors     = ["you"]
edition     = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                    = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog       = "2"
tauri-plugin-notification = "2"
tauri-plugin-http         = "2"
tauri-plugin-opener       = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
